--- a/SMS/SMSapp/templates/home.html
+++ b/SMS/SMSapp/templates/home.html
@@ -1,16 +1,87 @@
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap 5.3.3 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+    <link href="{% static 'SMSapp/style.css' %}" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>THIS IS HOME</h1>
+    <div class="container my-4">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1DhP6U5gkUOmhMPoCkB7uj1p6U8z65Kgf80OJFdroaf" crossorigin="anonymous"></script>
+            <div class="col">
+                <div class="card h-100 text-center">
+                    <img src="{% static 'icons/records.png' %}" class="card-img-top" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Student Record Management</h5><br>
+                        <p class="card-text">Student List</p>
+                        <p class="card-text">Performance Prediction</p>
+                    </div>
+                </div>
+        </div>
+
+        <div class="col">
+            <div class="card h-100 text-center">
+                <img src="{% static 'icons/class.png' %}" class="card-img-top" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Class Management</h5><br>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card h-100 text-center">
+                <img src="{% static 'icons/analytics.png' %}" class="card-img-top" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">SMART Analytics</h5><br>
+                    <p class="card-text">Student Grouping and Profiling</p>
+                    <p class="card-text">Drop Out Risk Prediction</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card h-100 text-center">
+                <img src="{% static 'icons/settings.png' %}" class="card-img-top" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Settings</h5><br>
+                    <p class="card-text">Change Username and Password</p>
+                    <p class="card-text">Logout</p>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+
+    <style>
+        * {
+            font-family: "Ubuntu", sans-serif;
+        }
+
+        p:hover {
+            color: #0d6efd;
+            font-weight: bold;
+        }
+
+        p {
+            font-style: italic;
+        }
+
+        .container {
+        width: 80vw;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%)
+        }
+    </style>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
