--- a/SMS/SMSapp/templates/login.html
+++ b/SMS/SMSapp/templates/login.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>SMS Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap 5.3.3 CSS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
@@ -40,7 +42,16 @@
             {% endif %}
         </div>
     </div>
-
+    <style>
+        * {
+            font-family: "Ubuntu", sans-serif;
+        }
+        
+        h5:hover {
+            color: #0d6efd;
+            font-weight: bold;
+        }
+    </style>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
