--- a/SMS/SMSapp/templates/login.html
+++ b/SMS/SMSapp/templates/login.html
@@ -30,11 +30,6 @@
                 <button type="submit" class="btn btn-primary w-100">Login</button>
             </form>
 
-            <!-- when register button is clicked then redirect to register url page -->
-            <div class="mt-3 text-center">
-                <small>Don't have an account? <a href="{% url 'register' %}">Register here</a></small>
-            </div>
-
             {% if error %}
                 <div class="alert alert-danger mt-3">
                     {{ error }}
@@ -48,7 +43,7 @@
         }
         
         h5:hover {
-            color: #0d6efd;
+            color: #d63384;
             font-weight: bold;
         }
     </style>
