--- a/SMS/SMSapp/templates/home.html
+++ b/SMS/SMSapp/templates/home.html
@@ -35,11 +35,12 @@
             </div>
         </div>
         <br>
+        <br>
         <h3>SMART Analytics</h3>
         <div class="d-flex">  <!-- Changed to flex container -->
             <div class="card-container">
                 <div class="card text-center">
-                    <img src="{% static 'icons/analytics.png' %}" class="card-img-top" alt="Student List">
+                    <img src="{% static 'icons/analytics.png' %}" class="card-img-top" alt="Performance Prediction">
                     <div class="card-body">
                         <h5 class="card-title">Performance Prediction</h5>
                     </div>
@@ -48,7 +49,7 @@
 
             <div class="card-container">
                 <div class="card text-center">
-                    <img src="{% static 'icons/group.png' %}" class="card-img-top" alt="Class Management">
+                    <img src="{% static 'icons/group.png' %}" class="card-img-top" alt="Student Grouping and Profiling">
                     <div class="card-body">
                         <h5 class="card-title">Student Grouping & Profiling</h5>
                     </div>
@@ -57,7 +58,7 @@
 
             <div class="card-container">
                 <div class="card text-center">
-                    <img src="{% static 'icons/risk.png' %}" class="card-img-top" alt="Class Management">
+                    <img src="{% static 'icons/risk.png' %}" class="card-img-top" alt="Drop Out Risk Prediction">
                     <div class="card-body">
                         <h5 class="card-title">Droup Out Risk Prediction</h5>
                     </div>
@@ -65,27 +66,28 @@
             </div>
         </div>
         <br>
+        <br>
         <h3>Settings</h3>
         <div class="d-flex">  <!-- Changed to flex container -->
             <div class="card-container">
                 <div class="card text-center">
-                    <img src="{% static 'icons/change.png' %}" class="card-img-top" alt="Student List">
+                    <a href="{% url 'reset' %}"><img src="{% static 'icons/change.png' %}" class="card-img-top" alt="Change Username and Password"></a>
                     <div class="card-body">
-                        <h5 class="card-title">Change Username & Password</h5>
+                        <h5 class="card-title"><a href="{% url 'reset' %}">Change Username & Password</a></h5>
                     </div>
                 </div>
             </div>
 
             <div class="card-container">
                 <div class="card text-center">
-                    <img src="{% static 'icons/logout.png' %}" class="card-img-top" alt="Class Management">
+                    <a href="{% url 'logout' %}"><img src="{% static 'icons/logout.png' %}" class="card-img-top" alt="Logout"></a>
                     <div class="card-body">
-                        <!-- <h5 class="card-title">Logout</h5> -->
                         <h5 class="card-title"><a href="{% url 'logout' %}">Logout</a></h5>
                     </div>
                 </div>
             </div>
         </div>
+        <br>
         <br>
         <br>
     </div>
