--- a/SMS/SMSapp/templates/home.html
+++ b/SMS/SMSapp/templates/home.html
@@ -5,157 +5,206 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="{% static 'script.js' %}"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.lineicons.com/5.0/lineicons.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container my-4">
-        <h1>Student Management System</h1>
-        <hr><br>
-        <h3>Student Record Management</h3>
-        <div class="d-flex">  <!-- Changed to flex container -->
-            <div class="card-container">
-                <div class="card text-center">
-                    <img src="{% static 'icons/records.png' %}" class="card-img-top" alt="Student List">
-                    <div class="card-body">
-                        <h5 class="card-title">Student List</h5>
+    <div class="d-flex">
+        <!-- Sidebar -->
+        <aside id="sidebar" class="sidebar-toggle">
+            <div class="sidebar-logo">
+                <a href="#"><img src="{% static 'icons/logo.png' %}" alt="LSPU Logo">LSPU SMS</a>
+            </div>
+            <br>
+            <!-- Sidebar Navigation -->
+            <ul class="sidebar-nav p-0">
+                <li class="sidebar-item">
+                    <a href="#" class="sidebar-link">
+                        <span>Dashboard</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="#" class="sidebar-link">
+                        <span>Student Management</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="#" class="sidebar-link">
+                        <span>Class Management</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="#" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse"
+                        data-bs-target="#smart" aria-expanded="true" aria-controls="smart">
+                        <i class="lni lni-protection"></i>
+                        <span>SMART Analytics</span>
+                    </a>
+                    <ul id="smart" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+                        <li class="sidebar-item">
+                            <a href="#" class="sidebar-link">Student Grouping & Profiling</a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a href="#" class="sidebar-link">Drop Out Risk Prediction</a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a href="#" class="sidebar-link">Performance Prediction</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="sidebar-item">
+                    <a href="#" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse"
+                        data-bs-target="#setting" aria-expanded="true" aria-controls="setting">
+                        <i class="lni lni-protection"></i>
+                        <span>Settings</span>
+                    </a>
+                    <ul id="setting" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+                        <li class="sidebar-item">
+                            <a href="#" class="sidebar-link">Change Username & Password</a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a href="#" class="sidebar-link">Logout</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </aside>
+        <!-- Sidebar Ends -->
+        <!-- Main Component -->
+        <div class="main">
+            <nav class="navbar navbar-expand">
+                <button class="toggler-btn" type="button">
+                    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(0 0 0)">
+                        <path d="M20 7.125L4 7.125C3.37868 7.125 2.875 6.62132 2.875 6C2.875 5.37868 3.37868 4.875 4 4.875L20 4.875C20.6213 4.875 21.125 5.37868 21.125 6C21.125 6.62132 20.6213 7.125 20 7.125ZM20 13.125L4 13.125C3.37868 13.125 2.875 12.6213 2.875 12C2.875 11.3787 3.37868 10.875 4 10.875L20 10.875C20.6213 10.875 21.125 11.3787 21.125 12C21.125 12.6213 20.6213 13.125 20 13.125ZM20 19.125L4 19.125C3.37868 19.125 2.875 18.6213 2.875 18C2.875 17.3787 3.37868 16.875 4 16.875L20 16.875C20.6213 16.875 21.125 17.3787 21.125 18C21.125 18.6213 20.6213 19.125 20 19.125Z" fill="#000000"/>
+                    </svg>                
+                </button>
+            </nav>
+            <main class="p-3">
+                <div class="container-fluid">
+                    <div class="mb-3 text-center">
+                        <h1>Bootstrap Sidebar Tutorial</h1>
                     </div>
                 </div>
-            </div>
-
-            <div class="card-container">
-                <div class="card text-center">
-                    <img src="{% static 'icons/class.png' %}" class="card-img-top" alt="Class Management">
-                    <div class="card-body">
-                        <h5 class="card-title">Class Management</h5>
-                    </div>
-                </div>
-            </div>
+            </main>
         </div>
-        <br>
-        <br>
-        <h3>SMART Analytics</h3>
-        <div class="d-flex">  <!-- Changed to flex container -->
-            <div class="card-container">
-                <div class="card text-center">
-                    <img src="{% static 'icons/analytics.png' %}" class="card-img-top" alt="Performance Prediction">
-                    <div class="card-body">
-                        <h5 class="card-title">Performance Prediction</h5>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card-container">
-                <div class="card text-center">
-                    <img src="{% static 'icons/group.png' %}" class="card-img-top" alt="Student Grouping and Profiling">
-                    <div class="card-body">
-                        <h5 class="card-title">Student Grouping & Profiling</h5>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card-container">
-                <div class="card text-center">
-                    <img src="{% static 'icons/risk.png' %}" class="card-img-top" alt="Drop Out Risk Prediction">
-                    <div class="card-body">
-                        <h5 class="card-title">Droup Out Risk Prediction</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-        <br>
-        <h3>Settings</h3>
-        <div class="d-flex">  <!-- Changed to flex container -->
-            <div class="card-container">
-                <div class="card text-center">
-                    <a href="{% url 'reset' %}"><img src="{% static 'icons/change.png' %}" class="card-img-top" alt="Change Username and Password"></a>
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="{% url 'reset' %}">Change Username & Password</a></h5>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card-container">
-                <div class="card text-center">
-                    <a href="{% url 'logout' %}"><img src="{% static 'icons/logout.png' %}" class="card-img-top" alt="Logout"></a>
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="{% url 'logout' %}">Logout</a></h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-        <br>
-        <br>
     </div>
-
     <style>
         * {
             font-family: "Ubuntu", sans-serif;
         }
 
+        li {
+            list-style: none;
+        }
+
         a {
-            color: black;
             text-decoration: none;
         }
 
-        a:visited {
-            color: black;
-            text-decoration: none;
+        .main{
+            min-height: 100vh;
+            width: 100%;
+            overflow: hidden;
         }
 
-        a:hover {
-            color: #d63384;
-        }
-
-        a:active {
-            color: black;
-        }
-
-        .d-flex {
-            gap: 35px; /* Minimal gap between cards */
-        }
-
-        .card-container {
-            padding: 0 !important;
-            margin: 0 !important;
-        }
-
-        .card {
-            width: 150px;
-            /* height: 170px; */
-            height: 210px;
-
+        #sidebar{
+            max-width: 264px;
+            min-width: 264px;
+            transition: all 0.35s ease-in-out;
+            background-color: white;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            padding: 10px;
+        }
+
+        #sidebar.collapsed {
+            margin-left: -264px;
+        }
+
+        .toggler-btn {
+            background-color: transparent;
+            cursor: pointer;
+            border: 0;
+        }
+
+        .toggler-btn i {
+            font-size: 1.5rem;
+            color: white;
+            font-weight: bold;
+        }
+
+        .navbar {
+            padding: 1.15rem 1.5rem;
+        }
+
+        .sidebar-nav {
+            flex: 1 1 auto;
+        }
+
+        .sidebar-logo {
+            padding: 1.15 rem 1.5rem;
             text-align: center;
-            margin: 0 !important;
         }
 
-        .card-img-top {
-            width: 100px;
-            height: 70px;
-            object-fit: contain;
-            margin-bottom: 10px;
+        .sidebar-logo a{
+            color: black;
+            font-weight: 800;
+            font-size: 1.25rem;
         }
 
-        .container {
+        .sidebar-header{
+            color: white;
+            font-size: .75rem;
+            padding: 1.5rem 1.5rem .375rem;
+        }
+
+        a.sidebar-link{
+            padding: .625rem 1.625rem;
+            /* color: white; */
+            color: #d63384;
+            position: relative;
+            transition: all 0.35s;
+            display: block;
+        }
+
+        a.sidebar-link:hover {
+            font-weight: bold;
+            background-color: black;
+        }
+
+        .sidebar-link[data-bs-toggle="collapse"]::after{
+            border: solid;
+            border-width: 0 .075rem .075rem 0;
+            content: "";
+            display: inline-block;
+            padding: 2px;
             position: absolute;
-            transform: translate(10%, 10%);
+            right: 1.5rem;
+            top: 1.4rem;
+            transform: rotate(-135deg);
+            transition: all 0.2s ease-out;
         }
 
-        /* Remove all default spacing */
-        body, html {
-            margin: 0;
-            padding: 0;
+        .sidebar-link[data-bs-toggle="collapse"].collapsed::after{
+            transform: rotate(45deg);
+            transition: all 0.2s ease-out;
+
         }
+
+        /* make it responsive */
+        @media (max-width:768px) {
+            .sidebar-toggle{
+                margin-left: -264px;
+            }
+
+            #sidebar.collapsed {
+                margin-left: 0;
+            }
+        }
+
     </style>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
