--- a/SMS/SMSapp/templates/home.html
+++ b/SMS/SMSapp/templates/home.html
@@ -63,10 +63,10 @@
                     </a>
                     <ul id="setting" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                         <li class="sidebar-item">
-                            <a href="#" class="sidebar-link">Change Username & Password</a>
+                            <a href="{% url 'reset' %}" class="sidebar-link">Change Username & Password</a>
                         </li>
                         <li class="sidebar-item">
-                            <a href="#" class="sidebar-link">Logout</a>
+                            <a href="{% url 'logout' %}" class="sidebar-link">Logout</a>
                         </li>
                     </ul>
                 </li>
