added sidebar pages

--- a/SMS/SMSapp/templates/classman.html
+++ b/SMS/SMSapp/templates/classman.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Student Record</title>
+    <title>Class Management</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="{% static 'script.js' %}"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,13 +36,13 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="{% url 'studentlist' %}" class="sidebar-link active">
+                    <a href="{% url 'studentlist' %}" class="sidebar-link">
                         <img src="{% static 'icons/records.png' %}" alt="Student Management" class="me-3" style="max-width: 40px;">
                         <span>Student Record</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="{% url 'classman' %}" class="sidebar-link">
+                    <a href="{% url 'classman' %}" class="sidebar-link active">
                         <img src="{% static 'icons/class.png' %}" alt="Class Management" class="me-3" style="max-width: 40px;">
                         <span>Class Management</span>
                     </a>
@@ -110,7 +110,7 @@
             <main class="p-3 d-flex flex-column justify-content-between" style="min-height: 80vh;">
                 <div class="container-fluid">
                     <div class="mb-3 text-center">
-                        <h1>Student Record</h1>
+                        <h1>Class Management</h1>
                     </div>
                 </div>
 
