--- a/SMS/SMSapp/templates/droprisk.html
+++ b/SMS/SMSapp/templates/droprisk.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Student Record</title>
+    <title>Drop Out Risk Prediction</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="{% static 'script.js' %}"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,7 +36,7 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="{% url 'studentlist' %}" class="sidebar-link active">
+                    <a href="{% url 'studentlist' %}" class="sidebar-link">
                         <img src="{% static 'icons/records.png' %}" alt="Student Management" class="me-3" style="max-width: 40px;">
                         <span>Student Record</span>
                     </a>
@@ -61,7 +61,7 @@
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a href="{% url 'droprisk' %}" class="sidebar-link">
+                            <a href="{% url 'droprisk' %}" class="sidebar-link active">
                                 <img src="{% static 'icons/risk.png' %}" alt="Drop Out Risk Prediction" class="me-3" style="max-width: 40px;">
                                 <span>Drop Out Risk Prediction</span>
                             </a>
@@ -110,7 +110,7 @@
             <main class="p-3 d-flex flex-column justify-content-between" style="min-height: 80vh;">
                 <div class="container-fluid">
                     <div class="mb-3 text-center">
-                        <h1>Student Record</h1>
+                        <h1>Drop Out Risk Prediction</h1>
                     </div>
                 </div>
 
